# fast-api-demo

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: main.py
app/api/routes/: api.py  users.py
app/db/repository/: userRepository.py
app/models/: user.py
app/src/db/models/: user.py
fast_api_demo/: main.py
fast_api_demo/src/db/: database.py
